add_subdirectory (vaporversion)
add_subdirectory (raw2wasp)
add_subdirectory (wasp2raw)
add_subdirectory (waspcreate)
add_subdirectory (ncdf2wasp)
add_subdirectory (wasp2ncdf)

if (BUILD_VDC OR BUILD_GUI)
	add_subdirectory (vdcdump)
	add_subdirectory (cf2vdc)
	add_subdirectory (cfvdccreate)
	add_subdirectory (raw2vdc)
	add_subdirectory (vdc2raw)
	add_subdirectory (vdccreate)
	add_subdirectory (wrf2vdc)
	add_subdirectory (wrfvdccreate)
endif()

if (BUILD_GUI)
	add_subdirectory (vaporgui)
	add_subdirectory (tiff2geotiff)
endif()
