if (BUILD_TEST_APPS)
	add_subdirectory (datamgr)
	add_subdirectory (grid_iter)
	add_subdirectory (VDC)
	add_subdirectory (params2)
	add_subdirectory (pyengine)
	add_subdirectory (quadtreerectangle)
	add_subdirectory (EasyThreads)
	add_subdirectory (smokeTests)
	# add_subdirectory (controlExec)
endif()
